--- a/styles/main.css
+++ b/styles/main.css
@@ -1,31 +1,42 @@
 body{
+    padding: 1rem;
     background-color: rgb(214, 214, 214);
+    align-content: center;
+    justify-content: center;
+    display: flex;
 }
 
 #main-page{
-    width: 100vw;
-    height: 100vh;
+    background-color: teal;
     display: grid;
     grid-template-rows: 10% 80%;
     justify-items: center;
+    border: thick double hsl(197, 70%, 20%);;
 }
 
 
 #nav{
     display: flex;
-    padding-left: 2rem;
-    background-color: rgb(255, 172, 172);
+    background-color: hsl(197, 70%, 50%);
     align-items: center;
     justify-content: center;
-    width: 650px;
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+    border-bottom: 1px solid hsl(197, 70%, 20%);
+}
+h1{
+    font-size: 3rem;
 }
 #content{
-    background-color: rgb(161, 161, 161);
+    background-color: rgb(193, 163, 197);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 650px;
-    height: 650px;
+    width: 750px;
+    height: 750px;
+    gap: 2.5rem;
 }
 
 #canvas{
@@ -37,12 +48,11 @@ body{
     
 }
 #btn{
-    width: 15%;
-    height: 40%;
-    border: thin solid hsl(0, 100%, 74%);
-    border-radius: 2px;
+    border: thin solid hsl(197, 70%, 20%);
+    background-color: hsl(197, 70%, 50%);
+    border-radius: 3px;
+    font-size: 1.5rem;
+    width: 125px;
+    height: 55px;
 }
-.cell{
-    border: 0.5px solid black;
-    box-sizing: border-box;
-}
+
